<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".OfficialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".OfficialActivity">

        <TextView
            android:id="@+id/phoneLink"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/phoneLink"
            android:textColor="@color/white"
            android:textColorLink="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/phoneView"
            app:layout_constraintTop_toBottomOf="@+id/addressLink" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/positionView" />

        <TextView
            android:id="@+id/officialLocationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorLink="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/positionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/position"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officialLocationView" />

        <TextView
            android:id="@+id/partyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/party"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameView" />

        <ImageView
            android:id="@+id/politicianImg"
            android:layout_width="211dp"
            android:layout_height="278dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partyView"
            app:srcCompat="@drawable/placeholder"
            tools:srcCompat="@drawable/placeholder" />

        <ImageView
            android:id="@+id/partyImg"
            android:layout_width="70dp"
            android:layout_height="67dp"
            android:layout_marginTop="220dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/politicianImg"
            app:srcCompat="@drawable/dem_logo" />

        <TextView
            android:id="@+id/addressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/politicianImg" />

        <TextView
            android:id="@+id/phoneView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressLink" />

        <TextView
            android:id="@+id/emailView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:text="@string/email"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneLink" />

        <TextView
            android:id="@+id/websiteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/website"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLink" />

        <ImageView
            android:id="@+id/facebookImg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:onClick="facebookClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/websiteLink"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/twitterImg"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginTop="8dp"
            android:onClick="twitterClicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintStart_toEndOf="@+id/facebookImg"
            app:layout_constraintTop_toBottomOf="@+id/websiteLink"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/youtubeImg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:onClick="youtubeClicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/twitterImg"
            app:layout_constraintTop_toBottomOf="@+id/websiteLink"
            app:srcCompat="@drawable/youtube" />

        <TextView
            android:id="@+id/addressLink"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/addressLink"
            android:textColor="@color/white"
            android:textColorLink="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/addressView"
            app:layout_constraintTop_toBottomOf="@+id/politicianImg" />

        <TextView
            android:id="@+id/emailLink"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/emailLink"
            android:textColorLink="@android:color/white"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/emailView"
            app:layout_constraintTop_toBottomOf="@+id/phoneLink" />

        <TextView
            android:id="@+id/websiteLink"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/websiteLink"
            android:textColor="@color/white"
            android:textColorLink="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/websiteView"
            app:layout_constraintTop_toBottomOf="@+id/emailLink" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>